Bug 875797 - Firefox 21 take long time compiling LESS CSS runtime with less-1.3.3.min.js. r=luke, a=akeybl